--- a/app/src/main/res/menu/menu_recycler_view.xml
+++ b/app/src/main/res/menu/menu_recycler_view.xml
@@ -2,5 +2,8 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="@string/create" />
+    <item
+        android:id="@+id/actionc_create"
+        android:title="@string/create"
+        app:showAsAction="always" />
 </menu>
